@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.91 2020/01/18 23:35:13 rillig Exp $
+# $NetBSD: Makefile,v 1.92 2020/02/11 11:45:25 kre Exp $
 
 BASH_VERSION=		5.0
-BASH_PATCHLEVEL=	11
+BASH_PATCHLEVEL=	16
 
 DISTNAME=	bash-${BASH_VERSION}
 PKGNAME=	bash-${BASH_VERSION:C/4\.4\..*/4.4/}.${BASH_PATCHLEVEL}
@@ -12,7 +12,8 @@ MASTER_SITES=	${MASTER_SITE_GNU:=bash/}
 PATCH_SITES=	${MASTER_SITES:=bash-5.0-patches/}
 PATCHFILES+=	bash50-001 bash50-002 bash50-003 bash50-004 bash50-005
 PATCHFILES+=	bash50-006 bash50-007 bash50-008 bash50-009 bash50-010
-PATCHFILES+=	bash50-011
+PATCHFILES+=	bash50-011 bash50-012 bash50-013 bash50-014 bash50-015
+PATCHFILES+=	bash50-016
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://www.gnu.org/software/bash/bash.html
