@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.56 2019/09/01 05:59:21 kre Exp $
+$NetBSD: distinfo,v 1.57 2020/02/11 11:45:25 kre Exp $
 
 SHA1 (bash-5.0.tar.gz) = d116b469b9e6ea5264a74661d3a4c797da7f997b
 RMD160 (bash-5.0.tar.gz) = a081428a896d617855499376b670eca3433a27c1
@@ -48,6 +48,26 @@ SHA1 (bash50-011) = c8dfa690a081b15826737cab955ff2d79c69dd7a
 RMD160 (bash50-011) = d2866cbdf4f5a8e1f79ff4795b6045a45bea4627
 SHA512 (bash50-011) = 05833d6c85f3795a9c100246335f39155c1b5d190e073bf382269c2bbceb13a2de3f85dbe1dd5d4c7824fcca481febe3bdbb4c555e1f2de86bec05fcf6f5871e
 Size (bash50-011) = 1870 bytes
+SHA1 (bash50-012) = 302ff4f46b7910f83600496d6afab898ff24f76b
+RMD160 (bash50-012) = 3c08d0e8a96645112fe86c407637f2d030319a7a
+SHA512 (bash50-012) = 24d67358eec07cc4cd0457ec0c296567558f20bf713b917fc8a8e5095a83f1c5db880bb863d483ca0c9e003972ac5f56596a2eb10c26c82bf6326d0475784e7e
+Size (bash50-012) = 1571 bytes
+SHA1 (bash50-013) = f03604304381de28bf16f4f86a7d98fc38c05b6e
+RMD160 (bash50-013) = 824d45c5779bf238b2891a4906a38d7e49f71ea8
+SHA512 (bash50-013) = 38fff9856c2259fbba607aacee027dd61e8733c6e5f476b7491bc43755fb5a63e82372f9f18663ec81e7480f0738b296271c948e1932e851f68f53cf3a1935b5
+Size (bash50-013) = 2328 bytes
+SHA1 (bash50-014) = 7ca0ac31f30ce2364999dc71d7e4d7bd1517dc3d
+RMD160 (bash50-014) = 1f36acc05688999814a8932ac87fcbd8f2f71b4c
+SHA512 (bash50-014) = e8f65be24b425ecaf66672eb4271e0efac2f495f882aeb559d60b52359a468b51852ed7aeeea0ab77cf648a48c9d37f2a00e263d06d29e9fa75b67a648399d91
+Size (bash50-014) = 1747 bytes
+SHA1 (bash50-015) = ea47fdb05dfde153414dccc79c51238156963bf1
+RMD160 (bash50-015) = 540db9eff2543184e504f2de9bff3c07642c2ce5
+SHA512 (bash50-015) = 3a1a552d1f03dec9ed41be8d8c319fb3cbd01df9978ab25a7b37322913014beca6703980f342ea908250b666d72db95402d7b8219ffdd3df717acb36ed4b72b9
+Size (bash50-015) = 2565 bytes
+SHA1 (bash50-016) = 93c1a62446bf403139fd266612df9204e477d40d
+RMD160 (bash50-016) = 19d5f631e0181e2671f9bcb8ee7419a46f99008e
+SHA512 (bash50-016) = dbc3bd0fe3bddad8f6417b210fc5638a9c0c545f9d27638d63bac48aba9d3b93181a4f2e9898584d231b658589573fad5e4627ccbcf3e9d87e7663ac730b51aa
+Size (bash50-016) = 1534 bytes
 SHA1 (patch-af) = e26e3209902247263884cfebc11a2f7e43245062
 SHA1 (patch-ag) = cd3b151e3bb045d2bb609c0a03d7d3df2c871f47
 SHA1 (patch-aj) = 2e4c15afd9b50d44967ee8e1f85bdc908c0eeeb0
