@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2020,v 1.1027 2020/02/11 08:01:32 he Exp $
+$NetBSD: CHANGES-2020,v 1.1028 2020/02/11 11:45:24 kre Exp $
 
 Changes to the packages collection and infrastructure in 2020:
 
@@ -1460,3 +1460,4 @@ Changes to the packages collection and infrastructure in 2020:
 	Updated devel/R-pkgbuild to 1.0.6 [mef 2020-02-11]
 	Updated emulators/mame to 0.218 [wiz 2020-02-11]
 	Updated security/opendnssec2 to 2.1.6 [he 2020-02-11]
+	Updated shells/bash to 5.0.16 [kre 2020-02-11]
